@@ -37,6 +37,7 @@ import megamek.client.ui.swing.widget.IndexedRadioButton;
 import megamek.client.ui.swing.widget.MegamekButton;
 import megamek.client.ui.swing.widget.SkinSpecification;
 import megamek.common.BattleArmor;
+import megamek.common.BipedMech;
 import megamek.common.Building;
 import megamek.common.BuildingTarget;
 import megamek.common.Compute;
@@ -289,8 +290,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
         if ((entity instanceof Mech)
             && !entity.isProne()
-            && entity.getCrew().getOptions()
-                     .booleanOption(OptionsConstants.PILOT_DODGE_MANEUVER)) { //$NON-NLS-1$
+            && entity.hasAbility(OptionsConstants.PILOT_DODGE_MANEUVER)) { //$NON-NLS-1$
             setDodgeEnabled(true);
         }
     }
@@ -419,28 +419,31 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         final Entity en = ce();
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
+        final boolean canZweihander = null != en
+                && (en instanceof BipedMech) 
+                && ((BipedMech)en).canZweihander()
+                && Compute.isInArc(en.getPosition(), en.getSecondaryFacing(), target, en.getForwardArc());;
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption(OptionsConstants.PILOT_MELEE_MASTER);
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
         
+              
         final ToHitData leftArm = PunchAttackAction.toHit(clientgui.getClient()
-                .getGame(), cen, target, PunchAttackAction.LEFT);
+                .getGame(), cen, target, PunchAttackAction.LEFT, false);
         final ToHitData rightArm = PunchAttackAction.toHit(clientgui
-                .getClient().getGame(), cen, target, PunchAttackAction.RIGHT);
+                .getClient().getGame(), cen, target, PunchAttackAction.RIGHT, false);
         
         final double punchOddsRight = Compute.oddsAbove(rightArm.getValue(),
                 isAptPiloting);
         final int punchDmgRight = PunchAttackAction.getDamageFor(en,
                 PunchAttackAction.RIGHT, (target instanceof Infantry)
-                        && !(target instanceof BattleArmor));
+                        && !(target instanceof BattleArmor), false);
         
         final double punchOddsLeft = Compute.oddsAbove(leftArm.getValue(),
                 isAptPiloting);
         final int punchDmgLeft = PunchAttackAction.getDamageFor(en,
                 PunchAttackAction.LEFT, (target instanceof Infantry)
-                        && !(target instanceof BattleArmor));
+                        && !(target instanceof BattleArmor), false);
         
         String title = Messages.getString("PhysicalDisplay.PunchDialog.title", //$NON-NLS-1$
                 new Object[] { target.getDisplayName() }); 
@@ -490,6 +493,53 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                         "PhysicalDisplay.ExtendBladeDialog.message",
                         new Object[] { en.getLocationName(Mech.LOC_RARM) }));
             }
+            
+            boolean zweihandering = false;
+            int armChosenZwei = PunchAttackAction.RIGHT;
+            if(canZweihander) {
+                
+                //need to choose a primary arm. Do it based on highest predicted damage     		
+                ToHitData leftArmZwei = PunchAttackAction.toHit(clientgui.getClient()
+                        .getGame(), cen, target, PunchAttackAction.LEFT, true);
+                ToHitData rightArmZwei = PunchAttackAction.toHit(clientgui
+                        .getClient().getGame(), cen, target, PunchAttackAction.RIGHT, true);
+                int damageRightZwei = PunchAttackAction.getDamageFor(en,
+                        PunchAttackAction.RIGHT, (target instanceof Infantry)
+                                && !(target instanceof BattleArmor), true);
+                int damageLeftZwei = PunchAttackAction.getDamageFor(en,
+                        PunchAttackAction.LEFT, (target instanceof Infantry)
+                                && !(target instanceof BattleArmor), true);
+                double oddsLeft = Compute.oddsAbove(leftArmZwei.getValue(), isAptPiloting);
+                double oddsRight = Compute.oddsAbove(rightArmZwei.getValue(), isAptPiloting);
+                ToHitData toHitZwei = rightArmZwei;
+                int damageZwei = damageRightZwei;
+                double oddsZwei = oddsRight;
+                if ((oddsLeft * damageLeftZwei) > (oddsRight * damageRightZwei)) {
+                    toHitZwei = leftArmZwei;
+                    damageZwei = damageLeftZwei;
+                    oddsZwei = oddsLeft;
+                    armChosenZwei = PunchAttackAction.LEFT;
+                } 
+                              
+                zweihandering = clientgui.doYesNoDialog(Messages
+                        .getString("PhysicalDisplay.ZweihanderPunchDialog.title"),
+                        Messages.getString("PhysicalDisplay.ZweihanderPunchDialog.message",
+                            new Object[] { 
+                                    toHitZwei.getValueAsString(),
+                                    oddsZwei,
+                                    toHitZwei.getDesc(),
+                                    damageZwei,
+                                    toHitZwei.getTableDesc()}));
+            }
+            
+            if(zweihandering) {
+                if(armChosenZwei==PunchAttackAction.LEFT) {
+                    leftArm.addModifier(TargetRoll.IMPOSSIBLE, "zweihandering with other arm");
+                } else {
+                    rightArm.addModifier(TargetRoll.IMPOSSIBLE, "zweihandering with other arm");
+                }
+            }
+
             disableButtons();
             // declare searchlight, if possible
             if (GUIPreferences.getInstance().getAutoDeclareSearchlight()) {
@@ -501,37 +551,37 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.BOTH, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.BOTH, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             } else if (leftArm.getValue() < rightArm.getValue()) {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.LEFT, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster  && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.LEFT, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             } else {
                 attacks.addElement(new PunchAttackAction(cen, target
                         .getTargetType(), target.getTargetId(),
                         PunchAttackAction.RIGHT, leftBladeExtend,
-                        rightBladeExtend));
-                if (isMeleeMaster) {
+                        rightBladeExtend, zweihandering));
+                if (isMeleeMaster && !zweihandering) {
                     // hit 'em again!
                     attacks.addElement(new PunchAttackAction(cen, target
                             .getTargetType(), target.getTargetId(),
                             PunchAttackAction.RIGHT, leftBladeExtend,
-                            rightBladeExtend));
+                            rightBladeExtend, zweihandering));
                 }
             }
             ready();
@@ -576,11 +626,9 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         final Entity en = ce();
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption(OptionsConstants.PILOT_MELEE_MASTER);
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
         
         ToHitData leftLeg = KickAttackAction.toHit(clientgui.getClient()
                 .getGame(), cen, target, KickAttackAction.LEFT);
@@ -669,13 +717,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.PushDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -704,13 +749,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TripDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -746,13 +788,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.GrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (counter) {
             message = Messages
@@ -760,13 +799,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                             "PhysicalDisplay.CounterGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                     target.getDisplayName(),
                                     toHit.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHit.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                     toHit.getDesc() });
         }
         if (clientgui.doYesNoDialog(title, message)) {
@@ -793,13 +829,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BreakGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -829,13 +862,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BAVibroClawDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(),
                                 ce().getVibroClaws() + toHit.getTableDesc() });
 
@@ -868,16 +898,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     JumpJetAttackAction.RIGHT);
             if ((d_left * Compute.oddsAbove(
                     left.getValue(),
-                    ce().getCrew()
-                            .getOptions()
-                            .booleanOption(
-                                    OptionsConstants.PILOT_APTITUDE_PILOTING))) > (d_right * Compute
+                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))) > (d_right * Compute
                     .oddsAbove(
                             right.getValue(),
-                            ce().getCrew()
-                                    .getOptions()
-                                    .booleanOption(
-                                            OptionsConstants.PILOT_APTITUDE_PILOTING)))) {
+                            ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING)))) {
                 toHit = left;
                 leg = JumpJetAttackAction.LEFT;
                 damage = d_left;
@@ -895,13 +919,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.JumpJetDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(), damage });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -928,9 +949,9 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                         && !(target instanceof BattleArmor);
                 final ToHitData toHit = ClubAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target, club, ash
-                        .getAimTable());
+                        .getAimTable(), false);
                 final int dmg = ClubAttackAction.getDamageFor(ce(), club,
-                        targetConvInf);
+                        targetConvInf, false);
                 // Need to do this outside getDamageFor, as it only returns int
                 String dmgString = dmg + "";
                 if ((((MiscType) club.getType()).hasSubType(MiscType.S_COMBINE)
@@ -983,20 +1004,22 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         final Entity en = ce();
         
         final boolean isAptPiloting = (en.getCrew() != null)
-                && en.getCrew()
-                        .getOptions()
-                        .booleanOption(OptionsConstants.PILOT_APTITUDE_PILOTING);
+                && en.hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING);
         final boolean isMeleeMaster = (en.getCrew() != null)
-                && en.getCrew().getOptions().booleanOption(OptionsConstants.PILOT_MELEE_MASTER);
-        
+                && en.hasAbility(OptionsConstants.PILOT_MELEE_MASTER);
+        final boolean canZweihander = null != en
+                && (en instanceof BipedMech) 
+                && ((BipedMech)en).canZweihander()
+                && Compute.isInArc(en.getPosition(), en.getSecondaryFacing(), target, en.getForwardArc());
+                
         final ToHitData toHit = ClubAttackAction.toHit(clientgui.getClient()
-                .getGame(), cen, target, club, ash.getAimTable());
+                .getGame(), cen, target, club, ash.getAimTable(), false);
         boolean targetConvInf = (target instanceof Infantry)
                 && !(target instanceof BattleArmor);
         final double clubOdds = Compute.oddsAbove(toHit.getValue(),
                 isAptPiloting);
         final int clubDmg = ClubAttackAction.getDamageFor(en, club,
-                targetConvInf);
+                targetConvInf, false);
         // Need to do this outside getDamageFor, as it only returns int
         String dmgString = clubDmg + "";
         if ((((MiscType) club.getType()).hasSubType(MiscType.S_COMBINE)
@@ -1022,6 +1045,23 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
         }
         
         if (clientgui.doYesNoDialog(title, message)) {
+            boolean zweihandering = false;
+            if(canZweihander) {
+                ToHitData toHitZwei = ClubAttackAction.toHit(clientgui.getClient()
+                        .getGame(), cen, target, club, ash.getAimTable(), true);
+                zweihandering = clientgui.doYesNoDialog(Messages
+                        .getString("PhysicalDisplay.ZweihanderClubDialog.title"),
+                        Messages.getString("PhysicalDisplay.ZweihanderClubDialog.message",
+                                new Object[] { 
+                                        toHitZwei.getValueAsString(),
+                                        Compute.oddsAbove(toHit.getValue(),
+                                                isAptPiloting),
+                                        toHitZwei.getDesc(),
+                                        ClubAttackAction.getDamageFor(en, club,
+                                                targetConvInf, true),
+                                        toHitZwei.getTableDesc() }));
+            }
+            
             disableButtons();
             // declare searchlight, if possible
             if (GUIPreferences.getInstance().getAutoDeclareSearchlight()) {
@@ -1030,12 +1070,12 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
 
             attacks.addElement(new ClubAttackAction(cen,
                     target.getTargetType(), target.getTargetId(), club, ash
-                            .getAimTable()));
-            if (isMeleeMaster) {
+                            .getAimTable(), zweihandering));
+            if (isMeleeMaster && !zweihandering) {
                 // hit 'em again!
                 attacks.addElement(new ClubAttackAction(cen, target
                         .getTargetType(), target.getTargetId(), club, ash
-                        .getAimTable()));
+                        .getAimTable(), zweihandering));
             }
             ready();
         }
@@ -1055,13 +1095,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.ProtoMechAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 proto.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 proto.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 proto.getDesc(),
                                 ProtomechPhysicalAttackAction.getDamageFor(
                                         ce(), target) + proto.getTableDesc() });
@@ -1089,7 +1126,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.LayExplosivesAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 explo.getValueAsString(),
-                                new Double(Compute.oddsAbove(explo.getValue())),
+                                Double.valueOf(Compute.oddsAbove(explo.getValue())),
                                 explo.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -1157,14 +1194,11 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.LAHit", new Object[] {//$NON-NLS-1$
                                     toHitLeft.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitLeft.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageLeft) });
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                    Integer.valueOf(damageLeft) });
         }
 
         // If we can hit with the right arm, get
@@ -1176,14 +1210,11 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.RAHit", new Object[] {//$NON-NLS-1$
                                     toHitRight.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitRight.getValue(),
-                                                    ce().getCrew()
-                                                            .getOptions()
-                                                            .booleanOption(
-                                                                    OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageRight) });
+                                                    ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                    Integer.valueOf(damageRight) });
         }
 
         // Allow the player to cancel or choose which arm(s) to use.
@@ -1283,13 +1314,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TrashDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
-                                                ce().getCrew()
-                                                        .getOptions()
-                                                        .booleanOption(
-                                                                OptionsConstants.PILOT_APTITUDE_PILOTING))),
+                                                ce().hasAbility(OptionsConstants.PILOT_APTITUDE_PILOTING))),
                                 toHit.getDesc(),
                                 ThrashAttackAction.getDamageFor(ce())
                                         + toHit.getTableDesc() });
@@ -1344,10 +1372,10 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 // punch?
                 final ToHitData leftArm = PunchAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target,
-                        PunchAttackAction.LEFT);
+                        PunchAttackAction.LEFT, false);
                 final ToHitData rightArm = PunchAttackAction.toHit(clientgui
                         .getClient().getGame(), cen, target,
-                        PunchAttackAction.RIGHT);
+                        PunchAttackAction.RIGHT, false);
                 boolean canPunch = (leftArm.getValue() != TargetRoll.IMPOSSIBLE)
                         || (rightArm.getValue() != TargetRoll.IMPOSSIBLE);
                 setPunchEnabled(canPunch);
@@ -1408,7 +1436,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     if (club != null) {
                         ToHitData clubToHit = ClubAttackAction.toHit(clientgui
                                 .getClient().getGame(), cen, target, club, ash
-                                .getAimTable());
+                                .getAimTable(), false);
                         canClub |= (clubToHit.getValue() != TargetRoll.IMPOSSIBLE);
                         // assuming S7 vibroswords count as swords and maces
                         // count as hatchets
