@@ -122,7 +122,7 @@ public class ComputeECM {
      * along the path from a to b
      */
     public static int getSmallCraftECM(Entity ae, Coords a, Coords b) {
-        if (!ae.getGame().getBoard().inSpace()) {
+        if (!ae.isSpaceborne()) {
             // only matters in space
             return 0;
         }
@@ -145,17 +145,17 @@ public class ComputeECM {
             if (ent.isEnemyOf(ae) && ent.hasActiveECM() && (entPos != null)
                 && !ent.isLargeCraft()) {
                 vEnemyECMCoords.addElement(entPos);
-                vEnemyECMRanges.addElement(new Integer(ent.getECMRange()));
+                vEnemyECMRanges.addElement(Integer.valueOf(ent.getECMRange()));
             }
             if (!ent.isEnemyOf(ae) && ent.hasActiveECCM() && (entPos != null)
                 && !ent.isLargeCraft()) {
                 vFriendlyECCMCoords.addElement(entPos);
-                vFriendlyECCMRanges.addElement(new Integer(ent.getECMRange()));
+                vFriendlyECCMRanges.addElement(Integer.valueOf(ent.getECMRange()));
             }
             if (!ent.isEnemyOf(ae) && ent.hasBAP(false) && (entPos != null)) {
                 vFriendlyBAPCoords.addElement(entPos);
-                vFriendlyBAPRanges.addElement(new Integer(ent.getBAPRange()));
-                vFriendlyBAPFacings.addElement(new Integer(ent.getFacing()));
+                vFriendlyBAPRanges.addElement(Integer.valueOf(ent.getBAPRange()));
+                vFriendlyBAPFacings.addElement(Integer.valueOf(ent.getFacing()));
             }
     
             // TODO: do docked dropships give ECM benefit?
@@ -245,7 +245,7 @@ public class ComputeECM {
      * along the path from a to b
      */
     public static int getLargeCraftECM(Entity ae, Coords a, Coords b) {
-        if (!ae.getGame().getBoard().inSpace()) {
+        if (!ae.isSpaceborne()) {
             // only matters in space
             return 0;
         }
@@ -268,17 +268,17 @@ public class ComputeECM {
             if (ent.isEnemyOf(ae) && ent.hasActiveECM() && (entPos != null)
                 && ent.isLargeCraft()) {
                 vEnemyECMCoords.addElement(entPos);
-                vEnemyECMRanges.addElement(new Integer(ent.getECMRange()));
+                vEnemyECMRanges.addElement(Integer.valueOf(ent.getECMRange()));
             }
             if (!ent.isEnemyOf(ae) && ent.hasActiveECCM() && (entPos != null)
                 && !ent.isLargeCraft()) {
                 vFriendlyECCMCoords.addElement(entPos);
-                vFriendlyECCMRanges.addElement(new Integer(ent.getECMRange()));
+                vFriendlyECCMRanges.addElement(Integer.valueOf(ent.getECMRange()));
             }
             if (!ent.isEnemyOf(ae) && ent.hasBAP(false) && (entPos != null)) {
                 vFriendlyBAPCoords.addElement(entPos);
-                vFriendlyBAPRanges.addElement(new Integer(ent.getBAPRange()));
-                vFriendlyBAPFacings.addElement(new Integer(ent.getFacing()));
+                vFriendlyBAPRanges.addElement(Integer.valueOf(ent.getBAPRange()));
+                vFriendlyBAPFacings.addElement(Integer.valueOf(ent.getFacing()));
     
             }
             // TODO: do docked dropships give ECM benefit?
@@ -484,7 +484,7 @@ public class ComputeECM {
             ecmComparator = new ECMInfo.ECCMComparator();
         }
         
-        if (ae.getGame().getBoard().inSpace()) {
+        if (ae.isSpaceborne()) {
             // normal ECM effects don't apply in space
             return null;
         }
