@@ -1,17 +1,18 @@
 /*
- * MegaMek - Copyright (C) 2000,2001,2002,2003,2004,2005 Ben Mazur
- * (bmazur@sev.org)
- *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
- *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
- */
+* MegaMek -
+* Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 Ben Mazur (bmazur@sev.org)
+* Copyright (C) 2018 The MegaMek Team
+*
+* This program is free software; you can redistribute it and/or modify it under
+* the terms of the GNU General Public License as published by the Free Software
+* Foundation; either version 2 of the License, or (at your option) any later
+* version.
+*
+* This program is distributed in the hope that it will be useful, but WITHOUT
+* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+* FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+* details.
+*/
 
 package megamek.common;
 
@@ -44,7 +45,6 @@ import megamek.common.weapons.gaussrifles.GaussWeapon;
 import megamek.common.weapons.lasers.CLImprovedHeavyLaserLarge;
 import megamek.common.weapons.lasers.CLImprovedHeavyLaserMedium;
 import megamek.common.weapons.lasers.CLImprovedHeavyLaserSmall;
-import megamek.common.weapons.lasers.EnergyWeapon;
 import megamek.common.weapons.lasers.ISRISCHyperLaser;
 import megamek.common.weapons.other.ISMekTaser;
 import megamek.common.weapons.other.TSEMPWeapon;
@@ -86,7 +86,7 @@ public abstract class Mech extends Entity {
     public static final int ACTUATOR_LOWER_LEG = 13;
 
     public static final int ACTUATOR_FOOT = 14;
-    
+
     public static final String systemNames[] = { "Life Support", "Sensors",
             "Cockpit", "Engine", "Gyro", null, null, "Shoulder", "Upper Arm",
             "Lower Arm", "Hand", "Hip", "Upper Leg", "Lower Leg", "Foot"};
@@ -165,26 +165,32 @@ public abstract class Mech extends Entity {
     public static final int COCKPIT_TRIPOD = 10;
 
     public static final int COCKPIT_INTERFACE = 11;
-    
+
     public static final int COCKPIT_VRRP = 12;
-    
+
     public static final int COCKPIT_QUADVEE = 13;
-    
+
     public static final int COCKPIT_SUPERHEAVY_INDUSTRIAL = 14;
+    
+    public static final int COCKPIT_SUPERHEAVY_COMMAND_CONSOLE = 15;
+    
+    public static final int COCKPIT_SMALL_COMMAND_CONSOLE = 16;
 
     public static final String[] COCKPIT_STRING = { "Standard Cockpit",
             "Small Cockpit", "Command Console", "Torso-Mounted Cockpit",
             "Dual Cockpit", "Industrial Cockpit", "Primitive Cockpit",
             "Primitive Industrial Cockpit", "Superheavy Cockpit",
             "Superheavy Tripod Cockpit", "Tripod Cockpit", "Interface Cockpit",
-            "Virtual Reality Piloting Pod", "QuadVee Cockpit", 
-            "Superheavy Industrial Cockpit" };
+            "Virtual Reality Piloting Pod", "QuadVee Cockpit",
+            "Superheavy Industrial Cockpit", "Superheavy Command Console", 
+	    "Small Command Console"};
 
     public static final String[] COCKPIT_SHORT_STRING = { "Standard", "Small",
             "Command Console", "Torso Mounted", "Dual", "Industrial",
             "Primitive", "Primitive Industrial", "Superheavy",
             "Superheavy Tripod", "Tripod", "Interface", "VRRP", "Quadvee",
-            "Superheavy Industrial" };
+            "Superheavy Industrial", "Superheavy Command", 
+            "Small Command"};
 
     public static final String FULL_HEAD_EJECT_STRING = "Full Head Ejection System";
 
@@ -282,7 +288,7 @@ public abstract class Mech extends Entity {
 
     // Cooling System Flaws quirk
     private boolean coolingFlawActive = false;
-    
+
     // QuadVees, LAMs, and tracked 'Mechs can change movement mode.
     protected EntityMovementMode originalMovementMode = EntityMovementMode.BIPED;
 
@@ -333,7 +339,7 @@ public abstract class Mech extends Entity {
         // ejection systems are disabled by default or not.
         autoEject = !PreferenceManager.getClientPreferences()
                 .defaultAutoejectDisabled();
-        
+
         switch (inCockpitType) {
         case COCKPIT_TRIPOD:
             setCrew(new Crew(CrewType.TRIPOD));
@@ -345,12 +351,19 @@ public abstract class Mech extends Entity {
             setCrew(new Crew(CrewType.DUAL));
             break;
         case COCKPIT_COMMAND_CONSOLE:
+	case COCKPIT_SUPERHEAVY_COMMAND_CONSOLE:
+	case COCKPIT_SMALL_COMMAND_CONSOLE:
             setCrew(new Crew(CrewType.COMMAND_CONSOLE));
             break;
         case COCKPIT_QUADVEE:
             setCrew(new Crew(CrewType.QUADVEE));
             break;
         }
+    }
+
+    @Override
+    public int getUnitType() {
+        return UnitType.MEK;
     }
 
     /**
@@ -499,6 +512,41 @@ public abstract class Mech extends Entity {
         } else {
             addTransporter(new ClampMountMech());
         }
+    }
+
+    public void setProtomechClampMounts() {
+        boolean front = false;
+        boolean rear = false;
+        for (Transporter t: getTransports()) {
+            if (t instanceof ProtomechClampMount) {
+                front |= !((ProtomechClampMount) t).isRear();
+                rear |= ((ProtomechClampMount) t).isRear();
+            }
+        }
+        if (!front) {
+            addTransporter(new ProtomechClampMount(false));
+        }
+        if (!rear) {
+            addTransporter(new ProtomechClampMount(true));
+        }
+    }
+
+    @Override
+    public void load(Entity unit, boolean checkElev, int bayNumber) {
+        if (unit.hasETypeFlag(Entity.ETYPE_PROTOMECH)) {
+            boolean rear = bayNumber > 0;
+            for (Transporter t : getTransports()) {
+                if ((t instanceof ProtomechClampMount)
+                        && t.canLoad(unit)
+                        && (!checkElev || (unit.getElevation() == getElevation()))
+                        && (((ProtomechClampMount) t).isRear() == rear)) {
+                    t.load(unit);
+                    unit.setTargetBay(-1);
+                    return;
+                }
+            }
+        }
+        super.load(unit, checkElev, bayNumber);
     }
 
     /**
@@ -1052,6 +1100,10 @@ public abstract class Mech extends Entity {
                 - (hasMPReducingHardenedArmor() ? 1 : 0);
     }
 
+    /**
+     * @return The mech's run MP without MASC or supercharger, but with any reduction
+     *         due to hardened armor.
+     */
     public int getOriginalRunMPwithoutMASC() {
         return super.getOriginalRunMP()
                 - (hasMPReducingHardenedArmor() ? 1 : 0);
@@ -1222,11 +1274,13 @@ public abstract class Mech extends Entity {
                 }
             }
         }
+        // Medium shield reduces jump mp by 1/shield
+        jump -= getNumberOfShields(MiscType.S_SHIELD_MEDIUM);
 
         if (hasModularArmor() && !ignoremodulararmor) {
             jump--;
         }
-
+        
         if (gravity) {
             return Math.max(applyGravityEffectsOnMP(jump), 0);
         }
@@ -1243,8 +1297,7 @@ public abstract class Mech extends Entity {
     public int getPartialWingJumpBonus(Mounted mount) {
         int bonus = 0;
         if (game != null) {
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_LIGHT)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_MEDIUM)) {
+            if ((getWeightClass() <= EntityWeightClass.WEIGHT_MEDIUM)) {
                 switch (game.getPlanetaryConditions().getAtmosphere()) {
                     case PlanetaryConditions.ATMO_VACUUM:
                         bonus = 0;
@@ -1268,9 +1321,7 @@ public abstract class Mech extends Entity {
                     default:
                         bonus = 2;
                 }
-            }
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_HEAVY)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_ASSAULT)) {
+            } else {
                 switch (game.getPlanetaryConditions().getAtmosphere()) {
                     case PlanetaryConditions.ATMO_VACUUM:
                         bonus = 0;
@@ -1295,8 +1346,7 @@ public abstract class Mech extends Entity {
                 }
             }
         } else {
-            if ((getWeightClass() == EntityWeightClass.WEIGHT_LIGHT)
-                    || (getWeightClass() == EntityWeightClass.WEIGHT_MEDIUM)) {
+            if ((getWeightClass() <= EntityWeightClass.WEIGHT_MEDIUM)) {
                 bonus = 2;
             } else {
                 bonus = 1;
@@ -1459,13 +1509,13 @@ public abstract class Mech extends Entity {
 
         return jump;
     }
-    
+
     @Override
     public boolean isEligibleForPavementBonus() {
         //eligible if using Mech tracks
         return movementMode == EntityMovementMode.TRACKED;
     }
-    
+
     @Override
     public EntityMovementMode nextConversionMode(EntityMovementMode afterMode) {
         if (hasTracks() && afterMode != EntityMovementMode.TRACKED) {
@@ -1474,12 +1524,12 @@ public abstract class Mech extends Entity {
             return originalMovementMode;
         }
     }
-        
+
     /**
      * QuadVees and LAMs may not have to make PSRs to avoid falling depending on their mode,
      * and Mechs using tracks for movement do not have to make PSRs for damage to gyro or leg
      * actuators.
-     * 
+     *
      * @param gyroLegDamage Whether the PSR is due to damage to gyro or leg actuators
      * @return              true if the Mech can fall due to failed PSR.
      */
@@ -1487,7 +1537,7 @@ public abstract class Mech extends Entity {
     public boolean canFall(boolean gyroLegDamage) {
         return !isProne() && !(gyroLegDamage && movementMode == EntityMovementMode.TRACKED);
     }
-    
+
     /**
      * Return the height of this mech above the terrain.
      */
@@ -1511,14 +1561,14 @@ public abstract class Mech extends Entity {
     public void addEngineSinks(int totalSinks, BigInteger heatSinkFlag,
             boolean clan) {
         if (heatSinkFlag == MiscType.F_DOUBLE_HEAT_SINK) {
-            addEngineSinks(totalSinks, clan ? "CLDoubleHeatSink"
-                    : "ISDoubleHeatSink");
+            addEngineSinks(totalSinks, clan ? EquipmentTypeLookup.CLAN_DOUBLE_HS
+                    : EquipmentTypeLookup.IS_DOUBLE_HS);
         } else if (heatSinkFlag == MiscType.F_COMPACT_HEAT_SINK) {
-            addEngineSinks(totalSinks, "IS1 Compact Heat Sink");
+            addEngineSinks(totalSinks, EquipmentTypeLookup.COMPACT_HS_1);
         } else if (heatSinkFlag == MiscType.F_LASER_HEAT_SINK) {
-            addEngineSinks(totalSinks, "CLLaser Heat Sink");
+            addEngineSinks(totalSinks, EquipmentTypeLookup.LASER_HS);
         } else {
-            addEngineSinks(totalSinks, "Heat Sink");
+            addEngineSinks(totalSinks, EquipmentTypeLookup.SINGLE_HS);
         }
     }
 
@@ -1667,7 +1717,7 @@ public abstract class Mech extends Entity {
     public int getHeatCapacity() {
         return getHeatCapacity(true, true);
     }
-    
+
     @Override
     public int getHeatCapacity(boolean radicalHeatSink) {
         return getHeatCapacity(true, radicalHeatSink);
@@ -1730,7 +1780,7 @@ public abstract class Mech extends Entity {
                                             // once.
             }
         }
-        // AirMech mode for LAMs confers the same heat benefits as a partial wing. 
+        // AirMech mode for LAMs confers the same heat benefits as a partial wing.
         if (includePartialWing && movementMode == EntityMovementMode.WIGE) {
             capacity += getPartialWingHeatBonus();
         }
@@ -1789,6 +1839,11 @@ public abstract class Mech extends Entity {
             }
         }
         return sinksUnderwater;
+    }
+    
+    @Override
+    public boolean tracksHeat() {
+        return true;
     }
 
     /**
@@ -2012,6 +2067,10 @@ public abstract class Mech extends Entity {
         if ((mounted.getType() instanceof WeaponType)
                 && mounted.getType().hasFlag(WeaponType.F_B_POD)) {
             return Compute.ARC_360;
+        }
+        // VGLs base arc on their facing
+        if (mounted.getType().hasFlag(WeaponType.F_VGL)) {
+            return Compute.firingArcFromVGLFacing(mounted.getFacing());
         }
         // rear mounted?
         if (mounted.isRearMounted()) {
@@ -2888,7 +2947,7 @@ public abstract class Mech extends Entity {
      */
     public void addClanCase() {
         boolean explosiveFound = false;
-        EquipmentType clCase = EquipmentType.get("CLCASE");
+        EquipmentType clCase = EquipmentType.get(EquipmentTypeLookup.CLAN_CASE);
         for (int i = 0; i < locations(); i++) {
             explosiveFound = false;
             for (Mounted m : getEquipment()) {
@@ -2905,7 +2964,7 @@ public abstract class Mech extends Entity {
             }
         }
     }
-    
+
     public Mounted addEquipment(EquipmentType etype, EquipmentType etype2,
             int loc,  boolean omniPod) throws LocationFullException {
         Mounted mounted = new Mounted(this, etype);
@@ -3022,7 +3081,7 @@ public abstract class Mech extends Entity {
             }
         }
     }
-  
+
     //From IO pg 50
     public static TechAdvancement getTechAdvancement(long etype, boolean primitive, boolean industrial, int weightClass) {
         if ((etype & ETYPE_TRIPOD_MECH) != 0) {
@@ -3051,6 +3110,15 @@ public abstract class Mech extends Entity {
                     .setProductionFactions(F_TH).setTechRating(RATING_C)
                     .setAvailability(RATING_C, RATING_X, RATING_F, RATING_F)
                     .setStaticTechLevel(SimpleTechLevel.ADVANCED);
+        } else if (industrial && (EntityWeightClass.WEIGHT_SUPER_HEAVY == weightClass)) {
+            // Superheavy industrialmechs don't have a separate entry on the tech advancement
+            // table in IO, but the dates for the superheavy tripod are based on the
+            // three-man digging machine, which is an industrialmech.
+            return new TechAdvancement(TECH_BASE_IS)
+                    .setAdvancement(2930, 2940).setPrototypeFactions(F_FW)
+                    .setProductionFactions(F_FW).setTechRating(RATING_D)
+                    .setAvailability(RATING_X, RATING_F, RATING_X, RATING_F)
+                    .setStaticTechLevel(SimpleTechLevel.ADVANCED);
         } else if (industrial) {
             return new TechAdvancement(TECH_BASE_ALL)
                     .setAdvancement(2460, 2470, 2500).setPrototypeFactions(F_TH)
@@ -3078,12 +3146,12 @@ public abstract class Mech extends Entity {
                     .setStaticTechLevel(SimpleTechLevel.INTRO);
         }
     }
-    
+
     @Override
     public TechAdvancement getConstructionTechAdvancement() {
         return getTechAdvancement(getEntityType(), isPrimitive(), isIndustrial(), getWeightClass());
     }
-    
+
     private final static TechAdvancement[] GYRO_TA =  {
             new TechAdvancement(TECH_BASE_ALL).setAdvancement(2300, 2350, 2505)
                 .setApproximate(true, false, false).setPrototypeFactions(F_TA)
@@ -3115,7 +3183,7 @@ public abstract class Mech extends Entity {
                 .setAvailability(RATING_X, RATING_F, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Superheavy
     };
-    
+
     private final static TechAdvancement[] COCKPIT_TA = {
             new TechAdvancement(TECH_BASE_ALL).setAdvancement(2468, 2470, 2487)
                 .setApproximate(true, false, false).setTechRating(RATING_D)
@@ -3138,7 +3206,7 @@ public abstract class Mech extends Entity {
             new TechAdvancement(TECH_BASE_ALL).setISAdvancement(3053, 3080, 3100)
                 .setClanAdvancement(3055, 3080, 3100)
                 .setPrototypeFactions(F_FS, F_LC, F_CSJ).setProductionFactions(F_LC)
-                .setApproximate(false, true, false).setTechRating(RATING_D) 
+                .setApproximate(false, true, false).setTechRating(RATING_D)
                 .setAvailability(RATING_X, RATING_X, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.EXPERIMENTAL), //Torso mounted
             //FIXME: Dual is unofficial; these are stats for standard
@@ -3195,8 +3263,19 @@ public abstract class Mech extends Entity {
                 .setPrototypeFactions(F_FW).setProductionFactions(F_FW)
                 .setAvailability(RATING_X, RATING_F, RATING_F, RATING_F)
                 .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Superheavy industrial
+            new TechAdvancement(TECH_BASE_IS).setISAdvancement(3060, 3076)
+                .setISApproximate(true, false).setTechRating(RATING_E)
+                .setPrototypeFactions(F_WB).setProductionFactions(F_WB)
+                .setAvailability(RATING_X, RATING_X, RATING_F, RATING_E)
+                .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Superheavy command console
+            new TechAdvancement(TECH_BASE_ALL).setISAdvancement(3060, 3067, 3080)
+                .setISApproximate(true, false, false)
+                .setClanAdvancement(DATE_NONE, 3080, 3080).setTechRating(RATING_E)
+                .setPrototypeFactions(F_FS).setProductionFactions(F_FS, F_CJF)
+                .setAvailability(RATING_X, RATING_X, RATING_E, RATING_D)
+                .setStaticTechLevel(SimpleTechLevel.ADVANCED), //Small Command Console
     };
-    
+
     // Advanced fire control for industrial mechs is implemented with a standard cockpit,
     // but the tech progression is different.
     public static TechAdvancement getIndustrialAdvFireConTA() {
@@ -3213,14 +3292,14 @@ public abstract class Mech extends Entity {
         }
         return null;
     }
-    
+
     public TechAdvancement getCockpitTechAdvancement() {
         if (isIndustrial() && (getCockpitType() == COCKPIT_STANDARD)) {
             return getIndustrialAdvFireConTA();
         }
         return getCockpitTechAdvancement(getCockpitType());
     }
-    
+
     public static TechAdvancement getGyroTechAdvancement(int gyroType) {
         if ((gyroType >= 0) && (gyroType < GYRO_TA.length)) {
             return new TechAdvancement(GYRO_TA[gyroType]);
@@ -3231,7 +3310,7 @@ public abstract class Mech extends Entity {
     public TechAdvancement getGyroTechAdvancement() {
         return getGyroTechAdvancement(getGyroType());
     }
-    
+
     public static TechAdvancement getFullHeadEjectAdvancement() {
         return new TechAdvancement(TECH_BASE_ALL).setISAdvancement(3020, 3023, 3100)
                 .setClanAdvancement(DATE_NONE, 3052, 3100).setPrototypeFactions(F_LC)
@@ -3261,13 +3340,12 @@ public abstract class Mech extends Entity {
         //    techAdvancement.setTechRating(Math.max(techAdvancement.getTechRating(), RATING_F));
         //}
     }
-    
+
     /**
      * This method will return the number of contiguous criticals in the given
      * location, starting at the given critical slot
      *
-     * @param unit          Unit to check critical slots on
-     * @param location      The location on the unit to check slots on
+     * @param loc           The location on the unit to check slots on
      * @param startingSlot  The critical slot to start at
      * @return
      */
@@ -3676,7 +3754,7 @@ public abstract class Mech extends Entity {
                             || etype.hasFlag(MiscType.F_EMERGENCY_COOLANT_SYSTEM))) {
                 toSubtract = 1;
             }
-            
+
             if (etype instanceof AmmoType
                     && ((AmmoType)mounted.getType()).getAmmoType() == AmmoType.T_COOLANT_POD) {
                 toSubtract = 1;
@@ -4710,15 +4788,20 @@ public abstract class Mech extends Entity {
                 @Override
                 public int compare(ArrayList<Object> obj1,
                         ArrayList<Object> obj2) {
+                    Double obj1BV = (Double) obj1.get(0); // BV
+                    Double obj2BV = (Double) obj2.get(0); // BV
+                    
                     // first element in the the ArrayList is BV, second is heat
                     // if same BV, lower heat first
-                    if (obj1.get(0).equals(obj2.get(0))) {
-                        return (int) Math.ceil((Double) obj1.get(1)
-                                - (Double) obj2.get(1));
+                    if(obj1BV.equals(obj2BV)) {
+                        Double obj1Heat = (Double) obj1.get(1);
+                        Double obj2Heat = (Double) obj2.get(1);
+                        
+                        return Double.compare(obj1Heat, obj2Heat);
                     }
+                    
                     // higher BV first
-                    return (int) Math.ceil((Double) obj2.get(0)
-                            - (Double) obj1.get(0));
+                    return Double.compare(obj2BV, obj1BV);
                 }
             });
             // count heat-generating weapons at full modified BV until
@@ -4955,7 +5038,7 @@ public abstract class Mech extends Entity {
                 // Ammo with no matching weapons counts 0, unless it's a coolant
                 // pod
                 // because coolant pods have no matching weapon
-                if (key.equals(new Integer(AmmoType.T_COOLANT_POD).toString()
+                if (key.equals(Integer.valueOf(AmmoType.T_COOLANT_POD).toString()
                         + "1")) {
                     ammoBV += ammo.get(key);
                 }
@@ -5068,14 +5151,14 @@ public abstract class Mech extends Entity {
             bvText.append("Weapon BV * Firing Control Modifier");
             bvText.append(endColumn);
             bvText.append(startColumn);
-            bvText.append(obv);
+            bvText.append(weaponBV);
             bvText.append(" * ");
             bvText.append("0.9");
             bvText.append(endColumn);
             weaponBV *= 0.9;
             bvText.append(startColumn);
             bvText.append(" = ");
-            bvText.append(obv);
+            bvText.append(weaponBV);
             bvText.append(endColumn);
             bvText.append(endRow);
         }
@@ -5158,7 +5241,8 @@ public abstract class Mech extends Entity {
 
         double cockpitMod = 1;
         if ((getCockpitType() == Mech.COCKPIT_SMALL)
-                || (getCockpitType() == Mech.COCKPIT_TORSO_MOUNTED)) {
+                || (getCockpitType() == Mech.COCKPIT_TORSO_MOUNTED)
+                || (getCockpitType() == Mech.COCKPIT_SMALL_COMMAND_CONSOLE)) {
             cockpitMod = 0.95;
             finalBV *= cockpitMod;
         } else if ((getCockpitType() == Mech.COCKPIT_TRIPOD)
@@ -5261,13 +5345,25 @@ public abstract class Mech extends Entity {
             cockpitCost = 1250000;
         } else if (getCockpitType() == Mech.COCKPIT_INDUSTRIAL) {
             cockpitCost = 100000;
+        } else if (getCockpitType() == Mech.COCKPIT_TRIPOD) {
+            cockpitCost = 400000;
         } else if (getCockpitType() == Mech.COCKPIT_QUADVEE) {
             cockpitCost = 375000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY) {
+            cockpitCost = 300000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY_COMMAND_CONSOLE) {
+            // The cost is the sum of both superheavy cockpit and command console
+            cockpitCost = 800000;
+        } else if (getCockpitType() == Mech.COCKPIT_SUPERHEAVY_TRIPOD) {
+            cockpitCost = 500000;
+        } else if (getCockpitType() == Mech.COCKPIT_SMALL_COMMAND_CONSOLE) {
+            // The cost is the sum of both small and command console
+            cockpitCost = 675000;            
         } else {
             cockpitCost = 200000;
         }
         if (hasEiCockpit()
-                && ((null != getCrew()) && getCrew().getOptions().booleanOption(OptionsConstants.UNOFF_EI_IMPLANT))) {
+                && ((null != getCrew()) && hasAbility(OptionsConstants.UNOFF_EI_IMPLANT))) {
             cockpitCost = 400000;
         }
         costs[i++] = cockpitCost;
@@ -5347,7 +5443,7 @@ public abstract class Mech extends Entity {
 
         double weaponCost = getWeaponsAndEquipmentCost(ignoreAmmo);
         costs[i++] = weaponCost;
-        
+
         if (this instanceof LandAirMech) {
             costs[i++] = (structureCost + weaponCost)
                     * (((LandAirMech)this).getLAMType() == LandAirMech.LAM_BIMODAL? 0.65 : 0.75);
@@ -5356,12 +5452,12 @@ public abstract class Mech extends Entity {
         } else {
             costs[i++] = 0;
         }
-        
+
         double cost = 0; // calculate the total
         for (int x = 0; x < i; x++) {
             cost += costs[x];
         }
-                        
+
         double quirkMultiplier = 0;
         if (hasQuirk(OptionsConstants.QUIRK_POS_GOOD_REP_1)) {
         	quirkMultiplier = 1.1f;
@@ -5371,7 +5467,7 @@ public abstract class Mech extends Entity {
         	cost *= quirkMultiplier;
         }
         costs[i++] = -quirkMultiplier; // negative just marks it as multiplier
- 
+
         double omniMultiplier = 0;
         if (isOmni()) {
             omniMultiplier = 1.25f;
@@ -5388,7 +5484,7 @@ public abstract class Mech extends Entity {
         addCostDetails(cost, costs);
         return cost;
     }
-    
+
     @Override
     protected int implicitClanCASE() {
         if (!isClan()) {
@@ -5563,14 +5659,15 @@ public abstract class Mech extends Entity {
         }
 
         // VDNI bonus?
-        if (getCrew().getOptions().booleanOption(OptionsConstants.MD_VDNI)
-                && !getCrew().getOptions().booleanOption(OptionsConstants.MD_BVDNI)) {
+        if (hasAbility(OptionsConstants.MD_VDNI)
+                && !hasAbility(OptionsConstants.MD_BVDNI)) {
             roll.addModifier(-1, "VDNI");
         }
 
         // Small/torso-mounted cockpit penalty?
-        if ((getCockpitType() == Mech.COCKPIT_SMALL)
-                && !getCrew().getOptions().booleanOption(OptionsConstants.MD_BVDNI)) {
+        if (((getCockpitType() == Mech.COCKPIT_SMALL) || (getCockpitType() == Mech.COCKPIT_SMALL_COMMAND_CONSOLE))
+                && (!hasAbility(OptionsConstants.MD_BVDNI)
+                && !hasAbility(OptionsConstants.UNOFF_SMALL_PILOT))) {
             roll.addModifier(1, "Small Cockpit");
         } else if (getCockpitType() == Mech.COCKPIT_TORSO_MOUNTED) {
             roll.addModifier(1, "Torso-Mounted Cockpit");
@@ -5594,7 +5691,7 @@ public abstract class Mech extends Entity {
             }
         }
 
-        if (hasQuirk(OptionsConstants.QUIRK_NEG_CRAMPED_COCKPIT)) {
+        if (hasQuirk(OptionsConstants.QUIRK_NEG_CRAMPED_COCKPIT) && !hasAbility(OptionsConstants.UNOFF_SMALL_PILOT)) {
             roll.addModifier(1, "cramped cockpit");
         }
 
@@ -6012,7 +6109,8 @@ public abstract class Mech extends Entity {
      */
     public boolean isAutoEject() {
         boolean hasEjectSeat = true;
-        if (getCockpitType() == COCKPIT_TORSO_MOUNTED) {
+        if (getCockpitType() == COCKPIT_TORSO_MOUNTED
+                || hasQuirk(OptionsConstants.QUIRK_NEG_NO_EJECT)) {
             hasEjectSeat = false;
         }
         if (isIndustrial()) {
@@ -6378,6 +6476,12 @@ public abstract class Mech extends Entity {
             case COCKPIT_SUPERHEAVY_INDUSTRIAL:
                 inName = "COCKPIT_SUPERHEAVY_INDUSTRIAL";
                 break;
+            case COCKPIT_SUPERHEAVY_COMMAND_CONSOLE:
+                inName = "COCKPIT_SUPERHEAVY_COMMAND_CONSOLE";
+                break;
+            case COCKPIT_SMALL_COMMAND_CONSOLE:
+                inName = "COCKPIT_SMALL_COMMAND_CONSOLE";
+                break;
             default:
                 inName = "COCKPIT_UNKNOWN";
         }
@@ -6523,7 +6627,7 @@ public abstract class Mech extends Entity {
         sb.append(newLine);
         sb.append(newLine);
 
-        Double tonnage = new Double(weight);
+        Double tonnage = Double.valueOf(weight);
         sb.append("Mass:").append(tonnage.intValue()).append(newLine);
         sb.append("Engine:");
         if(hasEngine()) {
@@ -6551,7 +6655,7 @@ public abstract class Mech extends Entity {
             sb.append("Standard");
         }
         sb.append(newLine);
-        
+
         if (this instanceof LandAirMech) {
             sb.append("LAM:");
             sb.append(((LandAirMech)this).getLAMTypeString());
@@ -6691,11 +6795,43 @@ public abstract class Mech extends Entity {
             sb.append(newLine);
         }
 
+        if (getFluff().getManufacturer().trim().length() > 0) {
+            sb.append("manufacturer:");
+            sb.append(getFluff().getManufacturer());
+            sb.append(newLine);
+        }
+
+        if (getFluff().getPrimaryFactory().trim().length() > 0) {
+            sb.append("primaryFactory:");
+            sb.append(getFluff().getPrimaryFactory());
+            sb.append(newLine);
+        }
+
+        if (getFluff().getNotes().trim().length() > 0) {
+            sb.append("notes:");
+            sb.append(getFluff().getNotes());
+            sb.append(newLine);
+        }
 
         if (getFluff().getMMLImagePath().trim().length() > 0) {
             sb.append("imagefile:");
             sb.append(getFluff().getMMLImagePath());
             sb.append(newLine);
+        }
+
+        for (EntityFluff.System system : EntityFluff.System.values()) {
+        	if (getFluff().getSystemManufacturer(system).length() > 0) {
+        		sb.append("systemmanufacturer:");
+        		sb.append(system.toString()).append(":");
+        		sb.append(getFluff().getSystemManufacturer(system));
+        		sb.append(newLine);
+        	}
+        	if (getFluff().getSystemModel(system).length() > 0) {
+        		sb.append("systemmodel:");
+        		sb.append(system.toString()).append(":");
+        		sb.append(getFluff().getSystemModel(system));
+        		sb.append(newLine);
+        	}
         }
 
         if (getUseManualBV()) {
@@ -6712,7 +6848,7 @@ public abstract class Mech extends Entity {
             return MtfFile.EMPTY;
         }
         int type = cs.getType();
-        int index = cs.getIndex();        
+        int index = cs.getIndex();
         String armoredText = "";
 
         if (cs.isArmored()) {
@@ -6994,6 +7130,60 @@ public abstract class Mech extends Entity {
         setCockpitType(COCKPIT_DUAL);
         return true;
     }
+	
+    public boolean addSuperheavyIndustrialCockpit() {
+        if (getEmptyCriticals(LOC_HEAD) < 5) {
+            return false;
+        }
+        addCritical(LOC_HEAD, 0, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_LIFE_SUPPORT));
+        addCritical(LOC_HEAD, 1, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        addCritical(LOC_HEAD, 2, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_COCKPIT));
+        addCritical(LOC_HEAD, 4, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        addCritical(LOC_HEAD, 5, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_LIFE_SUPPORT));
+        setCockpitType(COCKPIT_SUPERHEAVY_INDUSTRIAL);
+        return true;
+    }
+	
+    public boolean addSuperheavyCommandConsole() {
+        addCritical(LOC_HEAD, 0, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_LIFE_SUPPORT));
+        addCritical(LOC_HEAD, 1, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        addCritical(LOC_HEAD, 2, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_COCKPIT));
+        addCritical(LOC_HEAD, 3, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_COCKPIT));
+        addCritical(LOC_HEAD, 4, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        addCritical(LOC_HEAD, 5, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_LIFE_SUPPORT));
+        setCockpitType(COCKPIT_SUPERHEAVY_COMMAND_CONSOLE);
+        return true;
+    }
+    
+    //The location of critical is based on small cockpit, but since command console requires two cockpit slots the second Sensor is return to the location 4.
+    public boolean addSmallCommandConsole() {
+        if (getEmptyCriticals(LOC_HEAD) < 5) {
+            return false;
+        }
+        addCritical(LOC_HEAD, 0, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_LIFE_SUPPORT));
+        addCritical(LOC_HEAD, 1, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        addCritical(LOC_HEAD, 2, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_COCKPIT));
+        addCritical(LOC_HEAD, 3, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_COCKPIT));
+        addCritical(LOC_HEAD, 4, new CriticalSlot(CriticalSlot.TYPE_SYSTEM,
+                SYSTEM_SENSORS));
+        setCockpitType(COCKPIT_SMALL_COMMAND_CONSOLE);
+        return true;
+    }
 
     /**
      * Add the critical slots necessary for a torso-mounted cockpit. Note: This
@@ -7047,10 +7237,10 @@ public abstract class Mech extends Entity {
         }
         return success;
     }
-    
+
     /**
      * Determines which crew slot is associated with a particular cockpit critical.
-     * 
+     *
      * @param cs    A cockpit critical slot
      * @return      The crew slot index associated with this critical slot, or -1 to indicate the entire crew.
      */
@@ -7058,6 +7248,8 @@ public abstract class Mech extends Entity {
         //For those with split cockpits, count the cockpit criticals in the location until we reach the correct
         //one.
         if (getCockpitType() == COCKPIT_COMMAND_CONSOLE
+                || getCockpitType() == COCKPIT_SUPERHEAVY_COMMAND_CONSOLE
+	            || getCockpitType() == COCKPIT_SMALL_COMMAND_CONSOLE
                 || getCockpitType() == COCKPIT_DUAL
                 || getCockpitType() == COCKPIT_QUADVEE) {
             int crewSlot = 0;
@@ -7071,10 +7263,12 @@ public abstract class Mech extends Entity {
         }
         return -1;
     }
-    
+
     @Override
     public boolean hasCommandConsoleBonus() {
-        return getCockpitType() == COCKPIT_COMMAND_CONSOLE
+        return ((getCockpitType() == COCKPIT_COMMAND_CONSOLE) 
+		|| (getCockpitType() == COCKPIT_SUPERHEAVY_COMMAND_CONSOLE) 
+		|| (getCockpitType() == COCKPIT_SMALL_COMMAND_CONSOLE))
                 && getCrew().hasActiveCommandConsole()
                 && getWeightClass() >= EntityWeightClass.WEIGHT_HEAVY
                 && (!isIndustrial() || hasWorkingMisc(MiscType.F_ADVANCED_FIRECONTROL));
@@ -7479,45 +7673,6 @@ public abstract class Mech extends Entity {
     }
 
     @Override
-    public void setGameOptions() {
-        super.setGameOptions();
-
-        for (Mounted mounted : getWeaponList()) {
-            if ((mounted.getType() instanceof EnergyWeapon)
-                    && (((WeaponType) mounted.getType()).getAmmoType() == AmmoType.T_NA)
-                    && (game != null)
-                    && game.getOptions().booleanOption(OptionsConstants.ADVCOMBAT_TACOPS_ENERGY_WEAPONS)) {
-
-                ArrayList<String> modes = new ArrayList<String>();
-                String[] stringArray = {};
-
-                if ((mounted.getType() instanceof PPCWeapon) && (((WeaponType) mounted.getType()).getMinimumRange() > 0)
-                        && game.getOptions().booleanOption(OptionsConstants.ADVCOMBAT_TACOPS_PPC_INHIBITORS)) {
-                    modes.add("Field Inhibitor ON");
-                    modes.add("Field Inhibitor OFF");
-                }
-                int damage = ((WeaponType) mounted.getType()).getDamage();
-
-                if (damage == WeaponType.DAMAGE_VARIABLE) {
-                    damage = ((WeaponType) mounted.getType()).damageShort;
-                }
-
-                for (; damage >= 0; damage--) {
-                    modes.add("Damage " + damage);
-                }
-                if (((WeaponType) mounted.getType())
-                        .hasFlag(WeaponType.F_FLAMER)) {
-                    modes.add("Heat");
-                }
-                ((WeaponType) mounted.getType()).setModes(modes
-                        .toArray(stringArray));
-            }
-
-        }
-
-    }
-
-    @Override
     public void setGrappleSide(int side) {
         grappledSide = side;
     }
@@ -7893,7 +8048,7 @@ public abstract class Mech extends Entity {
             } else if (mountBv > 0) {
                 bv += mountBv * 0.05 * mount.getType().getCriticals(this);
             } else {
-                bv += 5;
+                bv += 5 * mount.getType().getCriticals(this);
             }
         }
 
@@ -7951,7 +8106,7 @@ public abstract class Mech extends Entity {
         if (hasMPReducingHardenedArmor()) {
             move--;
         }
-        
+
         if (getMisc().stream().filter(m -> m.getType().hasFlag(MiscType.F_CLUB))
         		.map(m -> m.getType().getSubType())
         		.anyMatch(st -> st == MiscType.S_SHIELD_LARGE || st == MiscType.S_SHIELD_MEDIUM)) {
@@ -7959,7 +8114,7 @@ public abstract class Mech extends Entity {
         }
         return move;
     }
-    
+
     @Override
     /*
      * returns the battle force structure points for a mech
@@ -8060,12 +8215,12 @@ public abstract class Mech extends Entity {
         return battleForceStructure;
 
     }
-    
+
     @Override
     public int getNumBattleForceWeaponsLocations() {
         return 2;
     }
-    
+
     @Override
     public double getBattleForceLocationMultiplier(int index, int location, boolean rearMounted) {
         if ((index == 0 && !rearMounted
@@ -8082,12 +8237,12 @@ public abstract class Mech extends Entity {
         }
         return "";
     }
-    
+
     @Override
     public boolean isBattleForceRearLocation(int index) {
         return index == 1;
     }
-    
+
     @Override
     public int getBattleForceTotalHeatGeneration(boolean allowRear) {
         int totalHeat = 0;
@@ -8109,7 +8264,7 @@ public abstract class Mech extends Entity {
             if (weapon.getAmmoType() == AmmoType.T_AC_ROTARY) {
                 totalHeat += weapon.getHeat() * 6;
             } else if (weapon.getAmmoType() == AmmoType.T_AC_ULTRA
-                    || weapon.getAmmoType() == AmmoType.T_AC_ULTRA_THB) {                
+                    || weapon.getAmmoType() == AmmoType.T_AC_ULTRA_THB) {
                 totalHeat += weapon.getHeat() * 2;
             } else {
                 totalHeat += weapon.getHeat();
@@ -8120,7 +8275,7 @@ public abstract class Mech extends Entity {
             totalHeat += 10;
         }
 
-        return totalHeat;        
+        return totalHeat;
     }
 
     @Override
@@ -8160,6 +8315,10 @@ public abstract class Mech extends Entity {
         }
         if (getCockpitType() == COCKPIT_COMMAND_CONSOLE) {
             specialAbilities.merge(BattleForceSPA.MHQ, 1, Integer::sum);
+        } else if (getCockpitType() == COCKPIT_SUPERHEAVY_COMMAND_CONSOLE) {
+            specialAbilities.merge(BattleForceSPA.MHQ, 1, Integer::sum);
+        } else if (getCockpitType() == COCKPIT_SMALL_COMMAND_CONSOLE) {
+            specialAbilities.merge(BattleForceSPA.MHQ, 1, Integer::sum);
         } else if (getCockpitType() == COCKPIT_VRRP) {
             specialAbilities.merge(BattleForceSPA.VR, 1, Integer::sum);
         }
@@ -8173,7 +8332,7 @@ public abstract class Mech extends Entity {
             specialAbilities.put(BattleForceSPA.SOA, null);
         }
     }
-    
+
     public abstract boolean hasMPReducingHardenedArmor();
 
     /**
@@ -8196,7 +8355,7 @@ public abstract class Mech extends Entity {
         return getHitCriticals(CriticalSlot.TYPE_SYSTEM, Mech.SYSTEM_GYRO,
                 Mech.LOC_CT);
     }
-    
+
     @Override
     public boolean isGyroDestroyed() {
         if (getGyroType() == GYRO_HEAVY_DUTY) {
@@ -8706,6 +8865,7 @@ public abstract class Mech extends Entity {
         return super.getInternal(loc);
     }
 
+    @Override
     public boolean isSuperHeavy() {
         return weight > 100;
     }
@@ -8819,9 +8979,9 @@ public abstract class Mech extends Entity {
                         && crit.isHittable()
                         && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                         && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                        vCriticals.put(new Integer(loc),
+                        vCriticals.put(Integer.valueOf(loc),
                                 new LinkedList<CriticalSlot>());
-                        vCriticals.get(new Integer(loc)).add(crit);
+                        vCriticals.get(Integer.valueOf(loc)).add(crit);
                         found = true;
                         break;
                     }
@@ -8834,9 +8994,9 @@ public abstract class Mech extends Entity {
                             && crit.isHittable()
                             && (crit.getType() == CriticalSlot.TYPE_SYSTEM)
                             && (crit.getIndex() == Mech.SYSTEM_ENGINE)) {
-                            vCriticals.put(new Integer(loc),
+                            vCriticals.put(Integer.valueOf(loc),
                                     new LinkedList<CriticalSlot>());
-                            vCriticals.get(new Integer(loc)).add(crit);
+                            vCriticals.get(Integer.valueOf(loc)).add(crit);
                             break;
                         }
                     }
